--- a/设计模式/创建模式/1-单例模式.ipynb
+++ b/设计模式/创建模式/1-单例模式.ipynb
@@ -4,34 +4,266 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[https://mp.weixin.qq.com/s?__biz=MzAxMjEwMzQ5MA==&mid=2448888343&idx=2&sn=64a2c677786aaabe751b44c42c81e0f1&chksm=8fb5483ab8c2c12ce5395d20f2234a09cd9f6a55b7f9cd22d6f7aee818458fbed89c04b287e5&scene=21#wechat_redirect](https://mp.weixin.qq.com/s?__biz=MzAxMjEwMzQ5MA==&mid=2448888343&idx=2&sn=64a2c677786aaabe751b44c42c81e0f1&chksm=8fb5483ab8c2c12ce5395d20f2234a09cd9f6a55b7f9cd22d6f7aee818458fbed89c04b287e5&scene=21#wechat_redirect)"
+    "### 1. 什么是单例模式? \n",
+    "创建单例类的方法叫单例模式. 单例类, 就是只能产生一个对象的类.\n",
+    "\n",
+    "### 2. 为什么使用单例模型\n",
+    "\n",
+    "#### 场景一: 一个写日志的类 (资源访问冲突) \n",
+    "1. 首先, 假设如下方法 FileWriter 的 write 方法本身没有锁. 此假设下设计一个Log类. 在多线程下写日志会冲突, 导致日志覆盖问题.     \n",
+    "首先想到加锁, 尝试方法上加 synchronized, 发现不管用, 因为这个加在对象上的锁, 对不同对象, 没有锁控制. 于是想到在类上加锁. synchronized(Log.class)\n",
+    "\n",
+    "```java\n",
+    "public class Logger { \n",
+    "\tprivate FileWriter writer; \n",
+    "\tpublic Logger() { \n",
+    "\t\tFile file = new File(\"/Users/wangzheng/log.txt\"); \n",
+    "\t\twriter = new FileWriter(file, true); //true表示追加写入 \n",
+    "\t} \n",
+    "\tpublic void log(String message) { \n",
+    "\t\t// synchronized(this) {        // 加锁加载对象上 (1)\n",
+    "\t\t// synchronized (Log.class){   //  加锁加在类上\n",
+    "\t\t\twriter.write(mesasge); \n",
+    "\t\t} \n",
+    "\t}\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "2. 在类上加锁是一种很通用的方法, 除此之外, 解决资源竞争的方法还有\n",
+    "\t* 将日志发送到一个 BlockingQueue, 用一个线程 EventLoop 负责将队列中的内容写到文件 (可参考 org.apache.spark.util.EventLoop)\n",
+    "\n",
+    "3. 如果用单例模式呢?   \n",
+    "上面的解决办法中, 虽然在类上加了锁, 但因为能创建多个 Log 对象, 导致空间浪费. 如果只能产生一个对象, 就可以节省内存. 当然即使只创建一个对象, 仍要保证线程安全问题, 单例模式和线程安全无关, 因为同一个对象可以被多个线程使用\n",
+    "\n",
+    "\n",
+    "\n",
+    "### 3. 单例模式的实现方式 \n",
+    "实现单例模式, 有几个问题需要考虑在内: \n",
+    "* 构造函数需要是 private 访问权限的，这样才能避免外部通过 new 创建实例；\n",
+    "* 考虑对象创建时的线程安全问题；\n",
+    "* 考虑是否支持延迟加载；\n",
+    "* 考虑 getInstance() 性能是否高（是否加锁）。\n",
+    "\n",
+    "\n",
+    "#### 1. 饿汉式\n",
+    "* 饿汉式的单例, 在类加载时, instance 静态实例就已经创建并初始化好了. \n",
+    "\t* 实例初始化是和类加载绑定的\n",
+    "\t* 用类的静态属性的方式保证只有一个实例\n",
+    "\t```java\n",
+    "\t// 一个单例的 ID 递增生成器\n",
+    "\tpublic class IdGenerator {\n",
+    "\t    private static final IdGenerator instance = new IdGenerator();\n",
+    "\t    private AtomicLong id = new AtomicLong(0);\n",
+    "\n",
+    "\t    private IdGenerator() {}\n",
+    "\n",
+    "\t    public static IdGenerator getInstance() {\n",
+    "\t        return instance;\n",
+    "\t    }\n",
+    "\n",
+    "\t    public long getId() {\n",
+    "\t        return id.incrementAndGet();\n",
+    "\t    }\n",
+    "\t}\n",
+    "\n",
+    "\t```\n",
+    "* 争议点: 不能延迟加载, 对象随类初始化  \n",
+    "  因为饿汉式的单利对象是在类加载时初始化的, 不能懒加载, 导致提前初始化. 所以其报表不已, 有人认为提前初始化是一种资源浪费, 应该真正使用时再去初始化; 而另一些人认为, 提前初始化满足 fail-fast 的设计原则（有问题及早暴露）, 而且如果资源不够，就会在程序启动的时候触发报错\n",
+    "\n",
+    "#### 2. 懒汉式\n",
+    "* 懒汉式相当于延迟加载版的饿汉式, 单例实例也是静态属性, 但实例是在 getInstance() 获取时创建, 也因此需要一把类级别的锁防止对象重复初始化.\n",
+    "\t```java\n",
+    "\tpublic class IdGenerator {\n",
+    "\t    private static IdGenerator instance;\n",
+    "\t    private AtomicLong id = new AtomicLong(0);\n",
+    "\n",
+    "\t    private IdGenerator() {}\n",
+    "\n",
+    "\t    public static synchronized IdGenerator getInstance() {   // 一把类级别的大锁\n",
+    "\t        if (instance == null) {\n",
+    "\t            instance = new IdGenerator();\n",
+    "\t        }\n",
+    "\n",
+    "\t        return instance;\n",
+    "\t    }\n",
+    "\n",
+    "\t    public long getId() {\n",
+    "\t        return id.incrementAndGet();\n",
+    "\t    }\n",
+    "\t}\n",
+    "\t```   \n",
+    "* 缺点: 无法面对高并发场景   \n",
+    "  懒汉式的缺点十分明显: 由于给 getInstance() 方法加了一把类级别的大锁（synchronzed）, 导致函数的并发度为1, 相当于串行操作. 如果这个单例类偶尔被用到，那这种实现方式还可以接受。但是，如果频繁地用到，那频繁加锁、释放锁及并发度低等问题，会导致性能瓶颈，\n",
+    "\n",
+    "#### 3. 双重检测  \n",
+    "饿汉式不支持延迟加载, 懒汉式不支持高并发. 因此出现第三种方式, 双重检测: 既能延迟加载, 又支持高并发.\n",
+    "* 基于懒汉式的改造点\n",
+    "\t* 如果实例已存在, 就不要先获得锁才能获取对象  \n",
+    "\t  因此, 加锁操作的锁竞争放在判断 instance 为空后进行, 还是类级别的大锁 (因为确保静态方法的锁)\n",
+    "\t```java\n",
+    "\tpublic class IdGenerator { \n",
+    "\t\tprivate AtomicLong id = new AtomicLong(0); \n",
+    "\t\tprivate volatile static IdGenerator instance; \n",
+    "\t\tprivate IdGenerator() {} \n",
+    "\t\tpublic static IdGenerator getInstance() { \n",
+    "\t\t\tif (instance == null) { \n",
+    "\t\t\t\tsynchronized(IdGenerator.class) { \n",
+    "\t\t\t\t\t// 此处为类级别的锁 \n",
+    "\t\t\t\t\tif (instance == null) { \n",
+    "\t\t\t\t\t\tinstance = new IdGenerator(); \n",
+    "\t\t\t\t\t} \n",
+    "\t\t\t\t} \n",
+    "\t\t\t} \n",
+    "\t\t\treturn instance; \n",
+    "\t\t} \n",
+    "\t\tpublic long getId() { \n",
+    "\t\t\treturn id.incrementAndGet(); \n",
+    "\t\t}\n",
+    "\t}\n",
+    "\t```\n",
+    "\n",
+    "* 为什么是双重检测? 只检测一遍 `instance == null` 不行吗\n",
+    "  因为为了支持 getInstance() 的高并发, 锁没有加载方法上, 而是加在 `if (instance == null)` 这个条件的判断后. 即判断条件本身没有加锁, 所以在进入 synchronized 代码块后, 判断条件可能已经不成立, 需要再次判断. 第二次判断因为加了锁, 所以是安全的\n",
+    "\n",
+    "* 为什么 instance 实例加 volatile?    \n",
+    "  在低版本的 jvm 中, 对象初始化`instance = new IdGenerator()` 这句其实是2个动做, 分为 `new IdGenerator()` 创建动作 和 `instance=` 赋值操作. CPU 的指令重排, 导致赋值语句和不依赖此变量的计算语句重排.[(参考volatile)](https://nbviewer.jupyter.org/github/lj72808up/JavaFeatures/blob/master/java-%E5%B9%B6%E5%8F%91%E5%92%8C%E5%B9%B6%E8%A1%8C%E7%BC%96%E7%A8%8B/Java%E5%B9%B6%E5%8F%91%E7%BC%96%E7%A8%8B%E5%AE%9E%E8%B7%B5/4-%E5%B9%B6%E5%8F%91%E5%9F%BA%E7%A1%80%E6%A8%A1%E5%9D%97.ipynb), 即在释放锁指令可能先于赋值语句执行. 即同步块退出后, 可能其它线程看到的 instance 仍然是 null, 导致对象重复创建.   \n",
+    "  高版本的 jvm 已不存在此问题, 解决办法很简单, 让对象的new和赋值成为原子操作即可. \n",
+    "\n",
+    "\n",
+    "#### 4. 静态内部类\n",
+    "静态内部类的方式, 是饿汉式的改造, 将饿汉式单例类作为一个整体放在普通类内部, `getInstance()` 方法返回内部静态类的静态属性 \n",
+    "```java\n",
+    "public class IdGenerator {\n",
+    "    private AtomicLong id = new AtomicLong(0);\n",
+    "\n",
+    "    private IdGenerator() {\n",
+    "    }\n",
+    "\n",
+    "    public static IdGenerator getInstance() {\n",
+    "        return SingletonHolder.instance;\n",
+    "    }\n",
+    "\n",
+    "    public long getId() {\n",
+    "        return id.incrementAndGet();\n",
+    "    }\n",
+    "\n",
+    "    private static class SingletonHolder {\n",
+    "        private static final IdGenerator instance = new IdGenerator();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "```\n",
+    "当外部类 IdGenerator 被加载的时候，并不会创建 SingletonHolder 实例对象。只有当调用 getInstance() 方法时，SingletonHolder 才会被加载，这个时候才会创建 instance。instance 的唯一性、创建过程的线程安全性，都由 JVM 的类加载来保证。所以，这种实现方法既保证了线程安全，又能做到延迟加载。\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### 5. 枚举\n",
+    "1. 上面4种方法的潜在问题? \n",
+    "  上面4中方法的问题在于, 我们是如何满足不让用户自己创建对象这一前提的? 是通过私有化构造函数, 避免用户访问构造函数. 可是即使不访问构造方法, 还有两种创建对象的方式: \n",
+    "\t* 反序列化创建对象化:    \n",
+    "\t  只要把单例对象序列化成字节流, 然后读取成新的对象, 就会创造出第二个对象. 因为反序列化是靠字节流和类模板实现, 不用通过构造函数 \n",
+    "\t* 反射:  \n",
+    "\t  反射会通过 api 调用私有方法\n",
+    "\t  ```java\n",
+    "\t  Constructor constructor = singleton.getClass().getDeclaredConstructor(new Class[0]);\n",
+    "      constructor.setAccessible(true);\n",
+    "\t  ```\n",
+    "\n",
+    "2. 用枚举实现单例, 解决上述所有问题  \n",
+    "\n",
+    "    1. jvm 如何实现枚举对象\n",
+    "        * 所有枚举编译后都是 `Enum` 的子类 . \n",
+    "        * `Enum` 类不支持序列化和反序列化. 对应方法直接抛异常\n",
+    "        ```java\n",
+    "        private void readObject(ObjectInputStream in) throws IOException,\n",
+    "            ClassNotFoundException {\n",
+    "            throw new InvalidObjectException(\"can't deserialize enum\");\n",
+    "        }\n",
+    "\n",
+    "        private void readObjectNoData() throws ObjectStreamException {\n",
+    "            throw new InvalidObjectException(\"can't deserialize enum\");\n",
+    "        }\n",
+    "        ```\n",
+    "        * enum 可以反射获取 value, 但不能反射调用构造函数\n",
+    "        * enum 的第一行, 是所有可能的, 不可变的枚举对象列表\n",
+    "        ```java\n",
+    "        public enum Season {\n",
+    "            // enum 有一组不可变的常量集合 (常量不可变, 集合不可变)\n",
+    "            WINTER(5), SPRING(10), SUMMER(15), FALL(20);\n",
+    "\n",
+    "            private int value;\n",
+    "\n",
+    "            // compiler 限制 enum 的构造函数必须是 private\n",
+    "            private Season(int value) {\n",
+    "                this.value = value;\n",
+    "            }\n",
+    "        }\n",
+    "        ```   \n",
+    "        枚举 Season 编译后生成的枚举类: \n",
+    "        ```java\n",
+    "        final class Season extends Enum {\n",
+    "            public static Season[] values() {\n",
+    "                return (Season[]) $VALUES.clone();\n",
+    "            }\n",
+    "\n",
+    "            public static Season valueOf(String s) {\n",
+    "                return (Season) Enum.valueOf(Season, s);\n",
+    "            }\n",
+    "\n",
+    "            private Season(String s, int i, int j) {\n",
+    "                super(s, i);\n",
+    "                value = j;\n",
+    "            }\n",
+    "\n",
+    "            public static final Season WINTER;\n",
+    "            public static final Season SUMMER;\n",
+    "            private int value;\n",
+    "            private static final Season $VALUES[];\n",
+    "\n",
+    "            static {\n",
+    "                WINTER = new Season(\"WINTER\", 0, 10);\n",
+    "                SUMMER = new Season(\"SUMMER\", 1, 20);\n",
+    "                $VALUES = (new Season[]{\n",
+    "                        WINTER, SUMMER\n",
+    "                });\n",
+    "            }\n",
+    "        } \n",
+    "        ```\n",
+    "        可见, 枚举第一行列出的所有可能的值, 在编译后会变成静态属性, 初始化放到了静态代码块中, 与饿汉模式写法相同, 且其构造函数不能通过反射调用, 又不能序列化反序列化, 因此是实现单例的最佳模式. \n",
+    "        \n",
+    "\t2. 基于枚举类型的单例实现。这种实现方式通过 Java 枚举类型本身的特性，保证了实例创建的线程安全性和实例的唯一性。具体的代码如下所示：\n",
+    " \t```java\n",
+    "\tpublic enum IdGenerator {\n",
+    "\t\tINSTANCE;\n",
+    "\n",
+    "\t    private AtomicLong id = new AtomicLong(0);\n",
+    "\n",
+    "\t    public long getId() {\n",
+    "\t        return id.incrementAndGet();\n",
+    "\t    }\n",
+    "\t}\n",
+    "\n",
+    "  \t```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
