--- a/设计模式/创建模式/2-工厂模式.ipynb
+++ b/设计模式/创建模式/2-工厂模式.ipynb
@@ -4,60 +4,194 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[https://mp.weixin.qq.com/s/VIQIyg_aWSKx--syBwMLdg](https://mp.weixin.qq.com/s/VIQIyg_aWSKx--syBwMLdg)"
+    "### 一. 简单工厂与实例工厂    \n",
+    "#### 1. 什么时候用简单工厂, 什么时候用实例工厂  \n",
+    "1. 当创建一个对象及其复杂, 只用 new 关键字不能表达的时候, 就可以用简单工厂模式, 将对象的创建过程写在一个静态方法里.    \n",
+    "    如下例子中, 根据文件名类型的不同, 按照不同方法解析文件, 形成配置类   \n",
+    "\t```java\n",
+    "\tclass RuleConfigSource {\n",
+    "\t    public RuleConfig load(String ruleConfigFilePath) throws Exception {\n",
+    "\t        String ruleConfigFileExtension = getFileExtension(ruleConfigFilePath);\n",
+    "\t        // 简单工厂创建对象\n",
+    "\t        IRuleConfigParser parser = RuleConfigFactory.createParser(ruleConfigFileExtension);\n",
+    "\n",
+    "\t        String configText = \"\";\n",
+    "\t        //从ruleConfigFilePath⽂件中读取配置⽂本到configText中\n",
+    "\t        RuleConfig ruleConfig = parser.parse(configText);\n",
+    "\t        return ruleConfig;\n",
+    "\t    }\n",
+    "\n",
+    "\t    private String getFileExtension(String filePath) {\n",
+    "\t    //...解析⽂件名获取扩展名，⽐如rule.json，返回json\n",
+    "\t        return \"json\";\n",
+    "\t    }\n",
+    "\t}\n",
+    "\n",
+    "\t// 简单工厂类\n",
+    "\tclass RuleConfigFactory {\n",
+    "\t    /**\n",
+    "\t     * 简单⼯⼚模式的代码实现中，有多处 if 分⽀判断逻辑，违背开闭原则，但\n",
+    "\t     * 权衡扩展性和可读性，这样的代码实现在⼤多数情况下（⽐如，不需要频繁地添加\n",
+    "\t     * parser，也没有太多的 parser）是没有问题的。\n",
+    "\t     */\n",
+    "\t    public static IRuleConfigParser createParser(String ruleConfigFileExtension) throws Exception {\n",
+    "\t        IRuleConfigParser parser;\n",
+    "\t        if (\"json\".equalsIgnoreCase(ruleConfigFileExtension)) {\n",
+    "\t            parser = new JsonRuleConfigParser();\n",
+    "\t        } else if (\"xml\".equalsIgnoreCase(ruleConfigFileExtension)) {\n",
+    "\t            parser = new XmlRuleConfigParser();\n",
+    "\t        } else if (\"yaml\".equalsIgnoreCase(ruleConfigFileExtension)) {\n",
+    "\t            parser = new YamlRuleConfigParser();\n",
+    "\t        } else if (\"properties\".equalsIgnoreCase(ruleConfigFileExtension)) {\n",
+    "\t            parser = new PropertiesRuleConfigParser();\n",
+    "\t        } else {\n",
+    "\t            throw new Exception(\"Rule config file format is not supported: \");\n",
+    "\t        }\n",
+    "\n",
+    "\t        return parser;\n",
+    "\t    }\n",
+    "\t}\n",
+    "\n",
+    "\n",
+    "\tinterface IRuleConfigParser{}\n",
+    "\tclass JsonRuleConfigParser implements IRuleConfigParser{}\n",
+    "\tclass XmlRuleConfigParser implements IRuleConfigParser{}\n",
+    "\tclass YamlRuleConfigParser implements IRuleConfigParser{}\n",
+    "\tclass PropertiesRuleConfigParser implements IRuleConfigParser{}\n",
+    "\t```\n",
+    "* 如果在此基础上, 当创建的对象是一类对象中的某一类时 (比如上例中的 xmlParser, jsonParser, htmlParser就属于一类 parser 对象), 如果还要使用简工厂,  那么`判断创建出什么样的对象` 这个判断逻辑, 就要全部使用 if-else 写在一个静态方法里. 当判断逻辑复杂时, 这些 if-else 就又变得丑陋, 于是将这个 if-else 判断规则抽成一个类, 用来判断返回哪个对象的创建方法, 这就需要用一个接口, 将对象的创建抽象出来, 再让不同的工厂类实现这个接口\n",
+    "\t```java\n",
+    "\t/**\n",
+    "\t * 各种工厂对象的接口\n",
+    "\t */\n",
+    "\tinterface IRuleConfigParserFactory {\n",
+    "\t    IRuleConfigParser createParser();\n",
+    "\t}\n",
+    "\n",
+    "\tclass JsonRuleConfigParserFactory implements IRuleConfigParserFactory {\n",
+    "\t    public IRuleConfigParser createParser() {\n",
+    "\t        /** 这些工厂中创建对象的逻辑是不适用的, 如果创建对象只用new, 那根本不用使用工厂模式来创建对象, 工厂模式是为了封装复杂的创建对象逻辑*/\n",
+    "\t        return new JsonRuleConfigParser();\n",
+    "\t    }\n",
+    "\t}\n",
+    "\n",
+    "\tclass XmlRuleConfigParserFactory implements IRuleConfigParserFactory {\n",
+    "\n",
+    "\t    public IRuleConfigParser createParser() {\n",
+    "\t        return new XmlRuleConfigParser();\n",
+    "\t    }\n",
+    "\t}\n",
+    "\n",
+    "\tclass YamlRuleConfigParserFactory implements IRuleConfigParserFactory {\n",
+    "\n",
+    "\t    public IRuleConfigParser createParser() {\n",
+    "\t        return new YamlRuleConfigParser();\n",
+    "\t    }\n",
+    "\t}\n",
+    "\n",
+    "\n",
+    "\tclass RuleConfigSource {\n",
+    "\t    /** 主要目标是完成从不同格式的文件中加载形成配置对象 */\n",
+    "\t    public RuleConfig load(String ruleConfigFilePath) throws Exception {\n",
+    "\t        String ruleConfigFileExtension = getFileExtension(ruleConfigFilePath);\n",
+    "\n",
+    "\t        // RuleConfigParserFactoryMap.getParserFactory 判断使用哪个工厂的规则\n",
+    "\t        IRuleConfigParserFactory parserFactory = RuleConfigParserFactoryMap.getParserFactory(ruleConfigFileExtension);\n",
+    "\t        if (parserFactory == null) {\n",
+    "\t            throw new Exception(\"Rule config file format is not supp\");\n",
+    "\t        }\n",
+    "\t        IRuleConfigParser parser = parserFactory.createParser();\n",
+    "\t        String configText = \"\";\n",
+    "\n",
+    "\t        //从ruleConfigFilePath⽂件中读取配置⽂本到configText中\n",
+    "\t        RuleConfig ruleConfig = parser.parse(configText);\n",
+    "\t        return ruleConfig;\n",
+    "\t    }\n",
+    "\n",
+    "\t    private String getFileExtension(String filePath) {\n",
+    "\t    //...解析⽂件名获取扩展名，⽐如rule.json，返回json\n",
+    "\t        return \"json\";\n",
+    "\t    }\n",
+    "\t}\n",
+    "\n",
+    "\t//因为⼯⼚类只包含⽅法，不包含成员变量，完全可以复⽤，\n",
+    "\t//不需要每次都创建新的⼯⼚类对象，所以，简单⼯⼚模式的第⼆种实现思路更加合适。\n",
+    "\tpublic class RuleConfigParserFactoryMap { //⼯⼚的⼯⼚\n",
+    "\t    private static final Map<String, IRuleConfigParserFactory> cachedFactories = new ConcurrentHashMap<String, IRuleConfigParserFactory>();\n",
+    "\n",
+    "\t    static {\n",
+    "\t        cachedFactories.put(\"json\", new JsonRuleConfigParserFactory());\n",
+    "\t        cachedFactories.put(\"xml\", new XmlRuleConfigParserFactory());\n",
+    "\t        cachedFactories.put(\"yaml\", new YamlRuleConfigParserFactory());\n",
+    "\t    }\n",
+    "\n",
+    "\t    public static IRuleConfigParserFactory getParserFactory(String type) {\n",
+    "\t        if (type == null || type.isEmpty()) {\n",
+    "\t            return null;\n",
+    "\t        }\n",
+    "\t        IRuleConfigParserFactory parserFactory = cachedFactories.get(type.toLowerCase();\n",
+    "\t        return parserFactory;\n",
+    "\t    }\n",
+    "\t}\n",
+    "\t```\n",
+    "\n",
+    "### 二. 抽象工厂  \n",
+    "抽象工厂和实例工厂的区别在于, 工厂接口的方法不止有一个,而是有多个. 这种区别主要用来表达, 使用第二个维度划分创建对象的种类. 即用工厂接口的不同方法名划分第二个维度. 实例工厂接口因为只有1个方法, 只能通过工厂的不同区分对象的种类, 只有一个维度上的区分\n",
+    "```java\n",
+    "interface IConfigParserFactory {\n",
+    "    IRuleConfigParser createRuleParser();\n",
+    "    ISystemConfigParser createSystemParser();\n",
+    "//此处可以扩展新的parser类型，⽐如IBizConfigParser\n",
+    "}\n",
+    "class JsonConfigParserFactory implements IConfigParserFactory {\n",
+    "    @Override\n",
+    "    public IRuleConfigParser createRuleParser() {\n",
+    "        return new JsonRuleConfigParser();\n",
+    "    }\n",
+    "    @Override\n",
+    "    public ISystemConfigParser createSystemParser() {\n",
+    "        return new JsonSystemConfigParser();\n",
+    "    }\n",
+    "}\n",
+    "class XmlConfigParserFactory implements IConfigParserFactory {\n",
+    "    @Override\n",
+    "    public IRuleConfigParser createRuleParser() {\n",
+    "        return new XmlRuleConfigParser();\n",
+    "    }\n",
+    "\n",
+    "    @Override\n",
+    "    public ISystemConfigParser createSystemParser() {\n",
+    "        return new XmlSystemConfigParser();\n",
+    "    }\n",
+    "\n",
+    "    // 省略YamlConfigParserFactory和PropertiesConfigParserFactory代码\n",
+    "}\n",
+    "\n",
+    "interface ISystemConfigParser{}\n",
+    "\n",
+    "class XmlSystemConfigParser implements ISystemConfigParser{}\n",
+    "class JsonSystemConfigParser implements ISystemConfigParser{}\n",
+    "```\n"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 1. 为什么需要工厂模式\n",
-    "非工厂模式:  \n",
-    "   面向对象编程的方式, 一旦依赖了某个类的方法, 想要在换一套实现变得不可能. 所谓\"面向扩展开放, 面向修改封闭\"(如下, 不能修改Service中`Dao dao = new JpaDao`这行, 也不能直接修改JpaDao这个类), 因此, 我们需要一种把对象的使用和对象的创建分离开来的方法\n",
-    "<img src=\"../img/factory1.png\" width=\"90%\">\n",
-    "\n",
-    "#### 2.简单工厂模式(静态工厂模式)  \n",
-    "工厂模式变为了面向接口编程, 简单工厂, 只是需要的对象提升成接口, 工厂模式下, 工厂类也有自己的接口   \n",
-    "**java的静态方法不能被覆盖, 重写**, 因此该工厂类不能被扩展\n",
-    "<img src=\"../img/factory2.png\" width=\"90%\">\n",
-    "为了让工厂能够创建出来多个Dao,想到可以利用传入类名+反射的技巧, 来替代工厂类中直接new对象, 使其可以产生各种不同对象, 修改Factory  \n",
-    "<img src=\"../img/factory3.png\" width=\"90%\">\n",
-    "\n",
-    "#### 3. 工厂模式\n",
-    "简单工厂模式只能创建一个对象; 当要创建多个对象的时候, 就需要使用普通工厂模式; 我们为每个对象设置一个工厂类, 对象的生成由所属工厂完成, 最后把所有工厂类抽象出一个工厂接口\n",
-    "<img src=\"../img/factory4.png\" width=\"90%\">\n",
-    "\n",
-    "#### 4. 抽象工厂模式 (可以产生同组对象的工厂模式)\n",
-    "<img src=\"../img/factory5.png\" width=\"90%\">\n",
-    "<img src=\"../img/factory6.png\" width=\"90%\">"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
