--- a/设计模式/创建模式/3-建造者模式.ipynb
+++ b/设计模式/创建模式/3-建造者模式.ipynb
@@ -4,59 +4,150 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[reference](https://mp.weixin.qq.com/s?__biz=MzAxMjEwMzQ5MA==&mid=2448888494&idx=1&sn=9c40171e5dfb42563bb1b29dcc44dcb1&chksm=8fb54883b8c2c195dc1cd9e3cd905fb317bab4106bc989314049b7eb2ecf5bd59f1f38a76f27&mpshare=1&scene=24&srcid=10185SIOWKmadEbwngNRaNeJ&sharer_sharetime=1571333546577&sharer_shareid=aee7ddb5e98ecf4c7211b17337c7846f&key=79a78721542791213e765ead77b8e5a1bd0fa1961ec29ab97a7889dee689df6e58fa9cf56f2c248d45a9d43660e694950e4546605d1ca7530f0399bc448dfc06e3c04d127da641b844efc3d51e0c5d77&ascene=14&uin=MTk5NDMyOTc1&devicetype=Windows+10&version=62070152&lang=zh_CN&pass_ticket=pchWxoir9vVXqyUfmSxwdjztmLRsvBrevyJXhICcWNs%3D)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 1. 一个组装电脑的例子, 看工厂模式和建造者模式  \n",
-    "* 之前在讲工厂模式的时候说过，工厂模式主要是用来生产**一个完整的产品**的。也就是说，用工厂模式创建出来的对象，就是一个最终的产品了。虽然抽象工厂模式可以一下子创建多个产品，但是这多个产品其本身就是一个完整的最终的产品，直接就可以使用了，无非是抽象工厂模式创建的这些个产品之类有一些关联，属于同一个类型的东西。  \n",
-    "* 但是我们的这个需求中，**对于电脑而言**，并不是需要创建出内存/CPU这些对象，而是需要创建出将他们组合后构成的一个完整的电脑对象。当然你也可以使用工厂模式来创建这些个零件，但是，之后你也还需要自己去对这些零部件进行组装，也就是说，你还是需要对这个对象的组成细节了解清楚，否则，你还是无法创建出一个完整的对象。另外，还会出现多一个零件，少一个零件的问题，会增加客户端的复杂度。  \n",
-    "* 于是，我们今天要讲的主角——建造者模式就闪亮登场了。\n",
+    "### 一. 建造者模式的产生  \n",
+    "1. 现在, 我们需要定义一个资源池配置类 ResourcePoolConfig   \n",
+    "   该类有三个属性 maxTotal、maxIdle、minIdle. 这3个参数本身有默认值 DEFAULT_MAX_TOTAL, DEFAULT_MAX_IDLE, DEFAULT_MIN_IDLE, 所以不是必填参数, 不需要在构造函数中初始化,应该放在 setter() 中配置. 根据上面的分析有如下代码: \n",
+    "\t```java\n",
+    "\tclass ResourcePoolConfig {\n",
+    "\t    private static final int DEFAULT_MAX_TOTAL = 8;\n",
+    "\t    private static final int DEFAULT_MAX_IDLE = 8;\n",
+    "\t    private static final int DEFAULT_MIN_IDLE = 0;\n",
+    "\t    private String name;\n",
+    "\t    // 默认值\n",
+    "\t    private int maxTotal = DEFAULT_MAX_TOTAL;\n",
+    "\t    private int maxIdle = DEFAULT_MAX_IDLE;\n",
+    "\t    private int minIdle = DEFAULT_MIN_IDLE;\n",
     "\n",
-    "#### 2. 什么是建造者模式  \n",
-    "* 建造者模式解决什么问题  \n",
-    "  建造者模式要解决的场景就是这个需求，致力于将一系列琐碎的零部件组装成一个完整的对象，而这其中具体的组装细节客户端是不需要知道的。\n",
-    "```\n",
-    "在建造者模式中，有一个抽象接口，里面会定义一系列对象零部件的装配的方法（组装内存、CPU、鼠标等这些个零件）。然后会有一个组装的人（比如电脑卖家），对这些个零部件进行组装，最后给客户端返回一个完整的对象。就比如上面组装电脑的例子。\n",
-    "```\n",
-    "* 建造者模式构建对象的方法\n",
-    "    1. 首先, 有一个抽象接口, 负责提供**要构造这个对象, 先完成什么零件**的语义, 子类具体实现创建什么零件\n",
-    "    <img src=\"../img/builder11.png\" width=\"100%\">\n",
-    "    2. 然后, 有一个装配者, 将这些硬件组装成一个对象返回出去\n",
-    "    <img src=\"../img/builder2.png\" width=\"100%\">\n",
-    "    \n",
-    "    3. 最后, 客户端直接调用装配者的方法返回这个对象\n",
-    "    <img src=\"../img/builder3.png\" width=\"100%\">"
+    "\t    public ResourcePoolConfig(String name) {\n",
+    "\t        if (name.equals(\"\")) {\n",
+    "\t            throw new IllegalArgumentException(\"name should not be empty.\");\n",
+    "\t        }\n",
+    "\t    }\n",
+    "\n",
+    "\t    public void setMaxTotal(int maxTotal) {\n",
+    "\t        this.maxTotal = maxTotal;\n",
+    "\t    }\n",
+    "\n",
+    "\t    public void setMaxIdle(int maxIdle) {\n",
+    "\t        this.maxIdle = maxIdle;\n",
+    "\t    }\n",
+    "\n",
+    "\t    public void setMinIdle(int minIdle) {\n",
+    "\t        this.minIdle = minIdle;\n",
+    "\t    }\n",
+    "\t}\n",
+    "\t```\n",
+    "\n",
+    "2. 如果 maxTotal、maxIdle、minIdle 这三个参数是相关联的, 只要设置其中一个, 就必须设置另外两个. 这种情况下, setter 函数必须连续调用, 否则会造成中间状态不可用. 且三个参数设置的值要校验为正数才有意义. 所以: \n",
+    "\t* 我们可以把校验逻辑放置到 Builder 类中，先创建建造者，并且通过 set() 方法设置建造者的变量值，\n",
+    "\t* 然后再使用 build() 方法真正创建对象之前，做集中的校验，校验通过之后才会创建对象。\n",
+    "\t* 除此之外，我们把 ResourcePoolConfig 的构造函数改为 private 私有权限。这样我们就只能通过建造者来创建 ResourcePoolConfig 类对象。并且，ResourcePoolConfig 没有提供任何 set() 方法，这样我们创建出来的对象就是不可变对象了。\n",
+    "\t```java\n",
+    "\tpublic class ResourcePoolConfig {\n",
+    "\t    private String name;\n",
+    "\t    private int maxTotal;\n",
+    "\t    private int maxIdle;\n",
+    "\t    private int minIdle;\n",
+    "\n",
+    "\t    private ResourcePoolConfig(Builder builder) {\n",
+    "\t        this.name = builder.name;\n",
+    "\t        this.maxTotal = builder.maxTotal;\n",
+    "\t        this.maxIdle = builder.maxIdle;\n",
+    "\t        this.minIdle = builder.minIdle;\n",
+    "\t    }\n",
+    "\t    //...省略getter方法...\n",
+    "\n",
+    "\t    //我们将Builder类设计成了ResourcePoolConfig的内部类。\n",
+    "\t    //我们也可以将Builder类设计成独立的非内部类ResourcePoolConfigBuilder。\n",
+    "\t    public static class Builder {\n",
+    "\t        private static final int DEFAULT_MAX_TOTAL = 8;\n",
+    "\t        private static final int DEFAULT_MAX_IDLE = 8;\n",
+    "\t        private static final int DEFAULT_MIN_IDLE = 0;\n",
+    "\n",
+    "\t        private String name;\n",
+    "\t        private int maxTotal = DEFAULT_MAX_TOTAL;\n",
+    "\t        private int maxIdle = DEFAULT_MAX_IDLE;\n",
+    "\t        private int minIdle = DEFAULT_MIN_IDLE;\n",
+    "\n",
+    "\t        public ResourcePoolConfig build() {\n",
+    "\t            // 校验逻辑放到这里来做，包括必填项校验、依赖关系校验、约束条件校验等\n",
+    "\t            if (StringUtils.isBlank(name)) {\n",
+    "\t                throw new IllegalArgumentException(\"...\");\n",
+    "\t            }\n",
+    "\t            if (maxIdle > maxTotal) {\n",
+    "\t                throw new IllegalArgumentException(\"...\");\n",
+    "\t            }\n",
+    "\t            if (minIdle > maxTotal || minIdle > maxIdle) {\n",
+    "\t                throw new IllegalArgumentException(\"...\");\n",
+    "\t            }\n",
+    "\n",
+    "\t            return new ResourcePoolConfig(this);\n",
+    "\t        }\n",
+    "\n",
+    "\t        public Builder setName(String name) {\n",
+    "\t            if (StringUtils.isBlank(name)) {\n",
+    "\t                throw new IllegalArgumentException(\"...\");\n",
+    "\t            }\n",
+    "\t            this.name = name;\n",
+    "\t            return this;\n",
+    "\t        }\n",
+    "\n",
+    "\t        public Builder setMaxTotal(int maxTotal) {\n",
+    "\t            if (maxTotal <= 0) {\n",
+    "\t                throw new IllegalArgumentException(\"...\");\n",
+    "\t            }\n",
+    "\t            this.maxTotal = maxTotal;\n",
+    "\t            return this;\n",
+    "\t        }\n",
+    "\n",
+    "\t        public Builder setMaxIdle(int maxIdle) {\n",
+    "\t            if (maxIdle < 0) {\n",
+    "\t                throw new IllegalArgumentException(\"...\");\n",
+    "\t            }\n",
+    "\t            this.maxIdle = maxIdle;\n",
+    "\t            return this;\n",
+    "\t        }\n",
+    "\n",
+    "\t        public Builder setMinIdle(int minIdle) {\n",
+    "\t            if (minIdle < 0) {\n",
+    "\t                throw new IllegalArgumentException(\"...\");\n",
+    "\t            }\n",
+    "\t            this.minIdle = minIdle;\n",
+    "\t            return this;\n",
+    "\t        }\n",
+    "\t    }\n",
+    "\t}\n",
+    "\t```\n",
+    "\n",
+    "\n",
+    "### 二. 为什么使用建造者模式\n",
+    "\n",
+    "#### 1. 直接使用构造函数或者配合 set 方法就能创建对象，为什么还需要建造者模式来创建呢？   \n",
+    "   实际上，如果我们并不是很关心对象是否有短暂的无效状态，也不是太在意对象是否是可变的。比如，对象只是用来映射数据库读出来的数据，那我们直接暴露 set() 方法来设置类的成员变量值是完全没问题的。而且，使用建造者模式来构建对象，代码实际上是有点重复的，ResourcePoolConfig 类中的成员变量，要在 Builder 类中重新再定义一遍。\n",
+    "\n",
+    "\n",
+    "#### 2. 建造者模式和工厂模式都可以创建对象，那它们两个的区别在哪里呢？   \n",
+    "  实际上，工厂模式是用来创建不同但是相关类型的对象（继承同一父类或者接口的一组子类），由给定的参数来决定创建哪种类型的对象。建造者模式是用来创建一种类型的复杂对象，通过设置不同的可选参数，“定制化”地创建不同的对象。"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
