--- a/分布式系统/2-CAP理论.ipynb
+++ b/分布式系统/2-CAP理论.ipynb
@@ -4,40 +4,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### $\\S$ 1. CAP理论和分布式数据库管理系统\n",
+    "因为服务之间通过网络进行通信， 网络通信是可能产生问题的， CAP 就是处理网络问题权衡的原则\n",
     "\n",
-    "#### 一. CAP理论介绍  \n",
-    "1. CAP理论:  \n",
-    "一个分布式系统, 只能确保3种属性中的2种:   \n",
-    "    * Consistency: 一致性\n",
-    "    * Availability: 可用性\n",
-    "    * Partition Tolerance: 分区容错性\n",
-    "    \n",
-    "2. CAP理论在大数据中是很重要的理论, 经常要在三者之中权衡\n",
+    "#### 一致性 Consistency\n",
+    "数据的分布式存储下, 数据库存在主从读写分离的操作. 写向主数据库写, 读从从数据库读. 如果主数据库写完就表示操作完成, 由于数据还未同步到从数据库, 此时从从数据库中会读不到这个数据, 用户的反应是\"明明写成功了, 为什么还读不到?\", 从而造成数据的不一致性. 解决方法是: 当从数据库数据同步完毕, 才表示写操作完成\n",
+    "一致性的实现: \n",
+    "1. 由于数据存在主从同步, 写操作的响应会有一定延迟\n",
+    "2. 为了保证数据一致性, 会对资源暂时锁定, 待数据同步完成后才能从从数据库进行读操作\n",
+    "3. 如果同步失败, 读操作要返回错误信息, 不能返回未同步的旧数据\n",
     "\n",
-    "#### 二. Partition Tolerance: 分区容错性\n",
-    "1. 这个条件表明: 在如下条件下, 系统可以持续运行: \n",
-    "    * 一个系统可以忍受任意数量的网络失败, 而不会造成整个网络的失败\n",
-    "    * 即使经过断断续续的停电故障, 数据记录仍能在节点和网络间被复制到足够的份数, 来保证系统正常运行\n",
-    "2. 分区容错性是现代分布式系统必须的属性, 因此只能在一致性和可用性之间权衡\n",
-    "    <img src=\"./img/partitiontolerance.png\" height=\"70%\" width=\"70%\">\n",
+    "#### 可用性 Availibility\n",
+    "用户任何时刻的请求都能得到响应, 不会出现延迟等待或返回错误的情况  \n",
+    "可用性实现: \n",
+    "1. 仍然保留主从同步, 但写操作不对资源锁定, 任何时刻都提供读操作服务\n",
+    "2. 如果从数据库还未同步完成, 可以给读操作响应旧数据, 不能返回错误信息\n",
     "\n",
-    "#### 三. High Consistency: 高一致性\n",
-    "1. 这个条件表明: 所有节点在同一时间看到同一份数据  \n",
-    " 简单说就是: 一个读操作, 将返回所有节点上最近一次写操作更新的值. 即所有节点都返回相同的,最近一次操作的值\n",
-    "2. 一个系统是一致性的: 如果一项事务从一致性状态开始, 又以一致性状态结束   \n",
-    "3. 一致性的系统, 在事务执行过程中可能会产生非一致性的状态. 但只要事务在任一阶段发生错误, 整个事务都会回滚\n",
-    "4. 图示  \n",
-    " 如下图, 有两条不同的数据(“Bulbasaur” and “Pikachu”)对应不同的时间戳. 第三部分的输出是“Pikachu”(最后的输入)  \n",
-    " 但是节点需要时间更新这个最新值, 而此时网络往往不可用.\n",
-    "  <img src=\"./img/HighConsistency.png\" height=\"70%\" width=\"70%\">\n",
-    "  \n",
-    "#### 四. High Availability: 高可用性\n",
-    "1. 这个条件表明: 系统在任何时间都保有100%的可操作性\n",
-    "2. 这种模式下的数据库是与时间无关的  \n",
-    " 如下图, 我们不知道“Pikachu”和“Bulbasaur”哪一条记录被先添加.\n",
-    " 因此, 输出可能是“Pikachu” or “Bulbasaur” . 所以\"High Availability\"的系统不适合处理高频率的流式数据\n",
-    "    <img src=\"./img/highavaliable.png\" height=\"70%\" width=\"70%\">"
+    "#### 分区容忍性 Partition tolerance\n",
+    "分布式系统下的每个服务因为依靠网络通信, 经常存在网络不通时, 服务之间无法进行通信. 因此不能因为网络不通就让整个分布式系统停止对外服务. 所以分区容忍性是必须满足的特性\n",
+    "分区容忍性实现: \n",
+    "1. 使用异步方式进行主从同步, 节点之间实现松耦合\n",
+    "2. 添加从数据库节点, 一个从数据库挂掉, 另一个从数据库提供服务\n",
+    "\n",
+    "#### CAP 之间的权衡\n",
+    "一致性 C 和可用性 A 之间是矛盾的. 前者要求对资源加锁, 数据一致后才能响应查询; 后者不对资源加锁, 及时数据不一致也要实时响应. 因此分布式系统只能满足其一. 从而出现了 CP 组合 和 AP 组合. (CA组合放弃了分区容忍性, 不再是分布式系统, 退化成单体数据库实现)\n",
+    "\n",
+    "1. AP: \n",
+    "放弃一致性, 满足可以性. 比如\"订单退款\", 今日退款成功, 明日查询到账. 只要用户能接受一定时间后到账即可\n",
+    "2. CP:   \n",
+    "放弃可用性, 满足一致性. 比如\"跨行转账\", 只有双方银行都返回操作成功后, 转账才算完成, 在此之前不响应用户操作\n",
+    "\n",
+    "\n",
+    "#### BASE 理论  \n",
+    "分布式一般要有限满足 AP 组合, 因为用户响应是优先考虑的. BASE 理论在 AP 的特性组合下, 通过降低可用性的程度来提供低程度的一致性 (最终一致性). 从一定程度上, 满足 CAP 同时成立的需求.\n",
+    "1. 可用性的降低 - 基本可用: 分布式系统在出现故障后, 只保留核心功能可用, 允许部分功能不可用. 比如: 电商网站的交易系统系统出现问题, 商品浏览功能依然满足  \n",
+    "2. 一致性的降低 - 最终一致性: 指系统内的数据不是时刻保持一致的, 而是经过一段时间后, 所有节点的数据达到一致. 比如: 支付的最终结果与实际交易结果一致, 但要延迟一天后显示一致\n",
+    "3. 增加数据的中间状态 - 软状态: 因为 BASE 理论没有满足强一致性, 当写入主节点后, 从数据库中的数据暂时处于不一致的状态, 这种状态表示数据的中间状态. 比如: 支付后显示\"支付中\"这个状态, 待数据最终一致后修改为\"成功\"状态\n",
+    "\n"
    ]
   }
  ],
@@ -57,7 +59,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
