--- a/java-垃圾回收/线上问题debug的一般步骤.ipynb
+++ b/java-垃圾回收/线上问题debug的一般步骤.ipynb
@@ -252,6 +252,15 @@
     "    * c. 也可以通过增加 -XX:ConcGCThreads 选项的值来增加并行标记线程的数目。\n",
     "3. 巨型对象分配失败    \n",
     "  当巨型对象找不到合适的空间进行分配时，就会启动 Full GC，来释放空间。这种情况下，应该避免分配大量的巨型对象，增加内存或者增大 -XX:G1HeapRegionSize，使巨型对象不再是巨型对象。\n",
+    "  \n",
+    "有时, 我们需要在一次 fullGC 的前后 dump 日志, 观察 full gc 发生前后的变化.有2中方法开启\n",
+    "1. 启动参数加上 `-XX:+HeapDumpBeforeFullGC -XX:+HeapDumpAfterFullGC -XX:HeapDumpPath=[file location]`    \n",
+    "2. 启动参数只加上 `-XX:HeapDumpPath=[file location]` 一个参数, 然后使用如下两个参数临时开启 full gc dump file   \n",
+    "    ```\n",
+    "    jinfo -flag +HeapDumpBeforeFullGC [pid] \n",
+    "    jinfo -flag +HeapDumpAfterFullGC  [pid]\n",
+    "    ```    \n",
+    "   这样在发生一次 full gc 后, 就有了相关日志 (就可以看到是上述哪个原因导致的 full gc, 还是 metaspace 导致的)\n",
     "\n",
     "\n",
     "### 四. 堆外内存\n",
@@ -270,7 +279,9 @@
     " <img src=\"img/nmt.dif\"/>       \n",
     "    * 如果释放了, 说明堆外内存设置太小, 增大: 通过 `-XX:MaxDirectMemorySize` 进行调整      \n",
     "    * 如果没释放, 就要用 mat 分析 `DirectByteBuffer`对象的引用关系 (dominateTree标签)         \n",
-    "    <img src=\"img/dominateTree.png\"/>"
+    "    <img src=\"img/dominateTree.png\"/>\n",
+    "    \n",
+    "   "
    ]
   },
   {
@@ -281,11 +292,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 六. 关于 MetaSpace\n",
+    "Metaspace使⽤的是本地内存，⽽不是堆内存. 很容易有个误区是Matespace可以随便⽤，不管使⽤多少，只要不超本地内存就不会触发GC，这是错误的。  \n",
+    "Matespace 的设置⽅式是: `-XX: MetaspaceSize=**M`, 让 Matespace 达到该值时触发 `Full GC`, 如果不设置Matespace, 默认值很⼩，也\n",
+    "就20M左右, 如果程序 Load Class ⽐较多，很容易触发 `Full GC`。\n",
+    "\n",
+    "MetaSpace 导致的 full gc 一方面可能是元空间大小太小; 另一方面可能是在`循环中`使用了`CGLIB动态代理产生了新类`, 因为⼀个类是由这个类的`类加载器`加上`全限定名（由包名&类名组成)` 确定唯⼀性的。 "
+   ]
   },
   {
    "cell_type": "code",
