--- a/java-垃圾回收/线上问题debug的一般步骤.ipynb
+++ b/java-垃圾回收/线上问题debug的一般步骤.ipynb
@@ -300,7 +300,7 @@
     "Matespace 的设置⽅式是: `-XX: MetaspaceSize=**M`, 让 Matespace 达到该值时触发 `Full GC`, 如果不设置Matespace, 默认值很⼩，也\n",
     "就20M左右, 如果程序 Load Class ⽐较多，很容易触发 `Full GC`。\n",
     "\n",
-    "MetaSpace 导致的 full gc 一方面可能是元空间大小太小; 另一方面可能是在`循环中`使用了`CGLIB动态代理产生了新类`, 因为⼀个类是由这个类的`类加载器`加上`全限定名（由包名&类名组成)` 确定唯⼀性的。 "
+    "MetaSpace 导致的 full gc 一方面可能是元空间大小太小; 另一方面可能是在`循环中`使用了`CGLIB动态代理产生了新类`, 因为⼀个类是由这个类的`类加载器`加上`全限定名（由包名&类名组成)` 确定唯⼀性的, 而动态代理生成的类名是变化的, 导致类加载过多 "
    ]
   },
   {
